--- a/DeezerProyecto/app/src/main/res/layout/activity_home.xml
+++ b/DeezerProyecto/app/src/main/res/layout/activity_home.xml
@@ -22,5 +22,7 @@
         android:background="@color/colorFondo"
         app:itemIconTint="@color/colorTexto"
         app:itemTextColor="@color/colorTexto"
+        app:itemBackground="@drawable/fondo_item_seleccionado"
+
         app:menu="@menu/menu_bottom_navigation" />
 </LinearLayout>
