--- a/DeezerProyecto/app/src/main/res/layout/fragment_playlists_publicas.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_playlists_publicas.xml
@@ -70,10 +70,11 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="16dp"
-            android:background="@drawable/fondo_tarjeta_gris"
+            android:background="@drawable/fondo_tarjeta"
             android:gravity="center_vertical"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            android:layout_marginBottom="16dp">
 
             <ImageView
                 android:layout_width="48dp"
@@ -86,6 +87,34 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Mis Amigos"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <!-- BOTÓN: Top Playlists -->
+        <LinearLayout
+            android:id="@+id/botonTopPlaylists"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="16dp"
+            android:background="@drawable/fondo_tarjeta"
+            android:gravity="center_vertical"
+            android:clickable="true"
+            android:focusable="true">
+
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_star"
+                android:contentDescription="Top Playlists"
+                android:layout_marginEnd="16dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Top Playlists"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
