--- a/DeezerProyecto/app/src/main/res/drawable/fondo_tarjeta_gris.xml
+++ b/DeezerProyecto/app/src/main/res/drawable/fondo_tarjeta_gris.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/colorGris" />
-    <corners android:radius="16dp" />
-    <padding android:left="16dp" android:right="16dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle"
+    android:elevation="4dp">
+
+    <solid android:color="#1E1E1E"/> <!-- Fondo nuevo -->
+    <corners android:radius="16dp"/>
 </shape>
+
